fix overflow scrollbar (chrome)

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     height: 5rem;
     font-weight: bold;
     font-size: 1.5rem;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 #server-info-logo {
